service-simple-banking.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-banking
  namespace: default
spec:
  selector:
    app: simple-banking
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000   # Port de ton container FastAPI
  type: ClusterIP
