ingress-simple-banking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-banking-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: banking.local    # Nom DNS (modifiable)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-banking
            port:
              number: 80
